tests/snapshots/snapshots__threats_panel.snap
---
source: tests/snapshots.rs
expression: result.screen
---
PANDEMIC DEFENSE   RUNNING   Tick: 0  Funds: $1000  RP: 0  Personnel: 50  Infected: 50.5K  Dead: 0
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ World Map ───────────────────────────────────────────────────────────────────────────────────────┐┌ Threats ─────────────────────────────────────────────────────────────────────────────────────────┐
│╔════════════════════════════╗   ┌────────────────────────────┐   ┌────────────────────────────┐  ││▶ Unknown Pathogen #1                                                                             │
│║North America             OK║   │Europe                    OK│   │Asia                    HIGH│  ││    ???                                                                                           │
│║Pop: 500.0M                 ║   │Pop: 750.0M                 │   │Inf 50.0K                   │  ││                                                                                                  │
│║████████████████████████████║   │████████████████████████████│   │████████████████████████████│  ││  Unknown Pathogen #2                                                                             │
│║No infections               ║───│                            │───│                            │  ││    ???                                                                                           │
│║↔ Oceania                   ║   │                            │   │                            │  ││                                                                                                  │
│║                            ║   │                            │   │                            │  ││                                                                                                  │
│╚════════════════════════════╝   └────────────────────────────┘   └────────────────────────────┘  ││                                                                                                  │
│               │               ╱                │               ╱                │                ││                                                                                                  │
│┌────────────────────────────┐   ┌────────────────────────────┐   ┌────────────────────────────┐  ││                                                                                                  │
││South America            LOW│   │Africa                    OK│   │Oceania                   OK│  ││                                                                                                  │
││Inf 500                     │   │Pop: 1.4B                   │   │Pop: 45.0M                  │  ││                                                                                                  │
││████████████████████████████│   │████████████████████████████│   │████████████████████████████│  ││                                                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
│└────────────────────────────┘   └────────────────────────────┘   └────────────────────────────┘  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[T] Threats  [R] Research  [M] Medicines  [P] Policy  [Space] Pause  [?] Help  [Q] Quit
